<resources>
    <string name="app_name">Мои встречи</string>

    <string name="login">Логин</string>
    <string name="login_tooltip">Введите почту</string>
    <string name="password_tooltip">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="btn_enter">Войти</string>
    <string name="btn_registration">Регистрация</string>

    <string name="title_added">Добавить встречу</string>
    <string name="name_added">Название</string>
    <string name="describe_added">Описание</string>
    <string name="to_date">Время начала:     </string>
    <string name="from_date">Время окончания:</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="participants">Участники</string>
    <string name="participant">Участник</string>
    <string name="priority">Приоритет:</string>
    <string name="add_added">Добавить</string>

    <string-array name="list_priorities">
        <item>Срочная</item>
        <item>Плановая</item>
        <item>По возможности</item>
    </string-array>

    <string-array name="list_participants">
        <item>Петров</item>
        <item>Иванов</item>
        <item>Сидоров</item>
        <item>Попов</item>
    </string-array>

    <string-array name="list_meetings">
        <item>Встреча 1</item>
        <item>Встреча 2</item>
        <item>Встреча 3</item>
        <item>Встреча 4</item>
    </string-array>


    <string name="title_described">Описание встречи</string>
    <string name="edit_described">Изменить</string>

    <string name="meetings_added">Встреча добавлена.</string>

    <string name="text_search">Введите слово</string>

    <string name="choice_delete">Удаление</string>
    <string name="choice_delete_text">Вы действительно хотите удалить запись?</string>
    <string name="choice_ok">Да</string>
    <string name="cancel">Отмена</string>

    <string name="menu_update">Обновить</string>

    <string name="my_choose_date">Выберите дату</string>
    <string name="ready">Готово</string>

    <string name="signIn">Авторизация прошла успешна!</string>
    <string name="signOut">Авторизация провалилась!</string>

    <string name="registrationIn">Регистрация прошла успешна!</string>
    <string name="registrationOut">Пользователь существует!</string>
    <string name="first_name">Имя</string>
    <string name="sign_up">Регистрация</string>
    <string name="last_name">Фамилия</string>
    <string name="middle_name">Отчество</string>
    <string name="number">Номер</string>
    <string name="loginI">Логин*</string>
    <string name="passwordI">Пароль*</string>
    <string name="necessarily">*Обязательно</string>
    <string name="btn_sign_in">Зарегистрироваться</string>
    <string name="position">Должность</string>
    <string name="edit">Изменить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading_meetings">Недавние</string>
    <string name="heading_my_meetings">Мои встречи</string>
    <string name="menu_log_out">Выход</string>
    <string name="default_text">description</string>
    <string name="added_participate">Добавиться</string>
    <string name="send">Отправить SMS</string>
    <string name="start_date">Начало в</string>
    <string name="end_date">Конец в</string>
    <string name="email">Почта</string>
    <string name="notification">Новая встреча!</string>
    <string name="load_msg">Обновлено!</string>
    <string name="search">Поиск</string>
    <string name="text_for_search_hint">поиск...</string>


</resources>
