<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/edit_middle_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name" />

    <EditText
        android:id="@+id/edit_position"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/position" />

    <EditText
        android:id="@+id/edit_numbers"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/number" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/loginI" />

    <EditText
        android:id="@+id/edit_passwords"
        android:layout_width="200dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:hint="@string/passwordI" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/necessarily" />

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_in" />

    <Button
        android:id="@+id/button_cansel_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
