<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="304dp"
    android:layout_height="437dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.chanta.myapplication.activity.AddedParticipantActivity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participant"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/middle_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/position"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/position" />

    <EditText
        android:id="@+id/numbers"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/number" />


    <Button
        android:id="@+id/button_added_participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_added" />

</LinearLayout>

