<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chanta.myapplication.DescribedActivity">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_described"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"

        android:layout_marginTop="8dp"
        android:text="@string/name_added"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.518" />

    <TextView
        android:id="@+id/describe_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe_added"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textView"
        app:layout_constraintVertical_bias="0.079"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.516" />

    <TextView
        android:id="@+id/to_date_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/to_date_textView"
        app:layout_constraintTop_toBottomOf="@+id/describe_textView"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/to_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintLeft_toRightOf="@+id/to_date_name_textView"
        app:layout_constraintRight_toLeftOf="@+id/to_time_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/to_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintLeft_toRightOf="@+id/to_date_textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/from_date_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/from_date_textView"
        app:layout_constraintTop_toBottomOf="@+id/to_date_name_textView"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/from_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintLeft_toRightOf="@+id/from_date_name_textView"
        app:layout_constraintRight_toLeftOf="@+id/from_time_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/from_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintLeft_toRightOf="@+id/from_date_textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/participant_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/participants_editText"
        app:layout_constraintTop_toBottomOf="@+id/from_date_name_textView"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/participants_editText"
        android:layout_width="190dp"
        android:layout_height="41dp"
        android:text=""
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_date_name_textView"
        app:layout_constraintVertical_bias="0.162" />


    <TextView
        android:id="@+id/priority_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/priority_spinner"
        app:layout_constraintTop_toBottomOf="@+id/participant_textView"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/priority_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/priority_textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:text="@string/edit_described"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />
</android.support.constraint.ConstraintLayout>
