<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/meeting_name_detail"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textStyle="bold"
        tools:text="My First Post" />

    <TextView
        android:id="@+id/meeting_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="@string/default_text" />
    <LinearLayout
        android:id="@+id/meeting_start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/to_date_textView_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/to_time_textView_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/meeting_end_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/from_date_textView_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/from_time_textView_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    </LinearLayout>

    <TextView
        android:id="@+id/meeting_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Priority" />

</LinearLayout>
