<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chanta.myapplication.StartActivity">

    <ImageView
        android:id="@+id/labelApp"
        android:layout_width="102dp"
        android:layout_height="100dp"

        android:layout_marginBottom="8dp"

        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"

        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"

        android:textSize="@dimen/app_name_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelApp"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/login_editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <EditText
        android:id="@+id/login_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_marginBottom="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="30dp"

        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="actionSend"
        android:inputType="textPersonName"
        android:labelFor="@+id/login_textView"
        android:maxLines="1"

        android:text="@string/login_tooltip"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameApp"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/password_editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"

        android:layout_marginTop="8dp"
        android:ems="10"

        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:labelFor="@+id/password_textView"

        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText"
        app:layout_constraintVertical_bias="0.307" />

</android.support.constraint.ConstraintLayout>
